Fixed Compass config

--- a/css/src/admin.scss
+++ b/css/src/admin.scss
@@ -4,3 +4,7 @@
 // CSS file to keep people from editing it directly.
 
 /* DO NO EDIT FILE DIRECTLY. USE SRC/ADMIN.SCSS */
+
+.head {
+	display: block;
+}
