--- a/css/admin.css
+++ b/css/admin.css
@@ -1,1 +1,4 @@
-/* This stylesheet is used to style the admin option form of the plugin. */
+/* DO NO EDIT FILE DIRECTLY. USE SRC/ADMIN.SCSS */
+.head {
+  display: block;
+}
